sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:6: error: illegal start of simple pattern
  for(var: Int i<-1 to 9){
      ^AlgSelectionSort:17: error: '<-' expected but '}' found.
} 
^