sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  /*var i: Int = 0;
  var j: Int = 0;
  */
  for(var: Int i<-1 to 9){
    var min = i;
    for(var: Int j<-i to 9){
       if(plusPetit(j,min)){
      min = j;;
    	}
    }
   
    echange(i,min);
  }

}